added counter to top right of pc pages

--- a/app/views/pairwise_comparisons/index.html.erb
+++ b/app/views/pairwise_comparisons/index.html.erb
@@ -23,9 +23,14 @@
 <h3 id = "titulo" class="title"> Which Request Would You Like to Receive? </h3>
 <hr class="feature-hr"/>
 <br/>
-<p id="prompt" class="feature-text">
-  Please choose which request you would prefer the algorithm to match you with.
-</p>
+<div>
+  <p id="prompt" class="feature-text">
+    Please choose which driver should get the ping.
+  </p>
+  <p id="top-counter" class="feature-text" align="right" style="margin-top:-3%;font-weight:bold;">
+    Scenario 1/<%= @num_pairs %>
+  </p>
+</div>
 <% if false %>
 
 <h4 id = "counter" style="margin-top:3%">
@@ -112,7 +117,7 @@
 
 <%# TODO disable this if nothing inputted %>
 <a class="waves-effect btn" id = "next_btn" style = "margin-left:40%;width:20%;color:#FFFFFF;background-color:#3d6ab1;font-weight:bold;" >
-  Next Scenario (2/<%= @num_pairs %>)
+  Next Scenario
 </a>
 <br><br><br>
 <br><br><br><br>
@@ -227,13 +232,10 @@
       $('.container-' + `${first+prev+1}`).css('display', 'block')
       $('.f-' + `${first+prev+1}`).css('display', 'block')
 
-      if (((prev+1)%(num_pairs))+1 != num_pairs ) {
-        $("#next_btn").html(`Next Scenario (${((prev+1)%(num_pairs))+2}/${num_pairs})`)
-      }
-      else {
+      if (((prev+1)%(num_pairs))+1 == num_pairs ) {
         $("#next_btn").html(`Finish`)
       }
-      $("#titulo").html(`Scenario ${((prev+1)%(num_pairs))+1}/${num_pairs}`)
+      $("#top-counter").html(`Scenario ${((prev+1)%(num_pairs))+1}/${num_pairs}`)
 
     });
 
