--- a/app/views/pairwise_comparisons/index_driver.html.erb
+++ b/app/views/pairwise_comparisons/index_driver.html.erb
@@ -23,8 +23,8 @@
   <p id="prompt" class="feature-text">
     Please choose which driver should get the ping.
   </p>
-  <p class="feature-text">
-    2/<%= @num_pairs %>
+  <p id="top-counter" class="feature-text" align="right" style="margin-top:-3%;font-weight:bold;">
+    Scenario 1/<%= @num_pairs %>
   </p>
 </div>
 <br/> <br/>
@@ -110,7 +110,7 @@
 
 <%# TODO disable this if nothing inputted %>
 <a class="waves-effect btn" id = "next_btn" style = "margin-left:40%;width:20%;color:#FFFFFF;background-color:#3d6ab1;font-weight:bold;" >
-  Next Scenario (2/<%= @num_pairs %>)
+  Next Scenario
 </a>
 <br><br><br>
 <br><br><br><br>
@@ -224,13 +224,10 @@
       $('.f-' + `${first+prev}`).css('display', 'none')
       $('.container-' + `${first+prev+1}`).css('display', 'block')
       $('.f-' + `${first+prev+1}`).css('display', 'block')
-      if (((prev+1)%(num_pairs))+1 != num_pairs ) {
-        $("#next_btn").html(`Next Scenario (${((prev+1)%(num_pairs))+2}/${num_pairs})`)
-      }
-      else {
+      if (((prev+1)%(num_pairs))+1 == num_pairs ) {
         $("#next_btn").html(`Finish`)
       }
-      $("#titulo").html(`Scenario ${((prev+1)%(num_pairs))+1}/${num_pairs}`)
+      $("#top-counter").html(`Scenario ${((prev+1)%(num_pairs))+1}/${num_pairs}`)
 
 
     });
