x on feature selection page now working and got rid of waves for next scenario buttons

--- a/app/views/pairwise_comparisons/index.html.erb
+++ b/app/views/pairwise_comparisons/index.html.erb
@@ -116,7 +116,7 @@
 <br><br> <br>
 
 <%# TODO disable this if nothing inputted %>
-<a class="waves-effect btn" id = "next_btn" style = "margin-left:40%;width:20%;color:#FFFFFF;background-color:#3d6ab1;font-weight:bold;" >
+<a class="btn" id = "next_btn" style = "margin-left:40%;width:20%;color:#FFFFFF;background-color:#3d6ab1;font-weight:bold;" >
   Next Scenario
 </a>
 <br><br><br>
