moved footer to back so mbp 13 inch should see submit button now

--- a/app/views/pairwise_comparisons/new.html.erb
+++ b/app/views/pairwise_comparisons/new.html.erb
@@ -1,5 +1,5 @@
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<div id="myModal" class="modal" style="padding-top:50px;">
  <!-- Modal content -->
  <div class="modal-content" style="padding-top: 34px !important;">
 
