added close button to new continuous feature modal

--- a/app/views/pairwise_comparisons/_continuous_add.html.erb
+++ b/app/views/pairwise_comparisons/_continuous_add.html.erb
@@ -1,5 +1,6 @@
 <div id="con_con" class="container" style="width: 100%; display: none;">
   <h4 class="modal-header"> Add Continuous Feature </h4>
+  <span class="close" style="float: right;margin-top:-50px;">&times;</span>
   <hr class="modal-hr">
   <br>
   <form>
