--- a/app/views/pairwise_comparisons/_categorical_company_add.html.erb
+++ b/app/views/pairwise_comparisons/_categorical_company_add.html.erb
@@ -1,5 +1,6 @@
 <div id = "cat_con" class="container" style = "width: 100%; display: none">
   <h4 class="modal-header"> Add Categorical Feature </h4>
+  <span class="close" style="float: right;margin-top:-50px;">&times;</span>
   <br>
   <hr class="modal-hr">
   <br>
