--- a/app/views/pairwise_comparisons/index.html.erb
+++ b/app/views/pairwise_comparisons/index.html.erb
@@ -36,48 +36,45 @@
 <% pcs = @pairwise_comparisons %>
 <% pcs.each do |pc| %>
 
+
   <div class = "container-<%= pc.id %>" style = "width:70%;margin-left:15%;display:none" >
   <div class = "scenario_1" id = "<%= pc.id %>-1" style = "width:45%;float:left;margin-right:5%;">
     <div class="row">
       <div class="card ">
         <div class="card-content">
           <h5 class="pc-header"> Request A </h5>
-            <% counter = 0 %>
-            <% @feats.size.times do %>
-              <% puts @feats.map{|n| n.category}.inspect %>
-                <p style = "font-weight:bold;font-size:20px;display:inline-block;">  
-                  <%= Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]] %>
-                </p>
-                <p style = "font-size:20px;display:inline-block;margin-left:1%;">
-                  <%=Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).unit%> 
-                </p> <br/>
-                <p style = "margin-bottom:4%;margin-top:1%;font-size:18px;line-height:1.4;">  
-                  <%= Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).name %>
-                </p>
-              <% counter += 1 %>
+            <% @feats.each do |feat| %>
+              <p style = "font-weight:bold;font-size:20px;display:inline-block;">
+                <%= Scenario.for_group(pc.scenario_1)[feat.id] %>
+              </p>
+              <p style = "font-size:20px;display:inline-block;margin-left:1%;">
+                <%= feat.unit %> 
+              </p> <br/>
+              <p style = "margin-bottom:4%;margin-top:1%;font-size:18px;line-height:1.4;">  
+                <%= feat.name %>
+              </p>
             <% end %>
         </div>
       </div>
     </div>
   </div>
 
+
   <div class = "scenario_2" id = "<%=pc.id%>-2" style = "width:45%;float:right;">
     <div class="row">
       <div class="card">
         <div class="card-content">
           <h5 class="pc-header"> Request B </h5>
-            <% counter = 0 %>
-            <% @feats.size.times do %>
-                <p style = "font-weight:bold;font-size:20px;display:inline-block;">  
-                  <%= Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]] %>
-                </p>
-                <p style = "font-size:20px;display:inline-block;margin-left:1%;">
-                  <%=Feature.find(Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]).unit%> 
-                </p> <br/>
-                <p style = "margin-bottom:4%;margin-top:1%;font-size:18px;line-height:1.4;"> 
-                  <%= Feature.find(Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]).name %> 
-                </p>
-              <% counter += 1 %>
+            <% @feats.each do |feat| %>
+              <p style = "font-weight:bold;font-size:20px;display:inline-block;">  
+                <%= Scenario.for_group(pc.scenario_2)[feat.id] %>
+              </p>
+              <p style = "font-size:20px;display:inline-block;margin-left:1%;">
+                <%= feat.unit %> 
+              </p> <br/>
+              <p style = "margin-bottom:4%;margin-top:1%;font-size:18px;line-height:1.4;"> 
+                <%= feat.name %>
+              </p>
             <% end %>
           </div>
         </div>
