--- a/app/views/pairwise_comparisons/index.html.erb
+++ b/app/views/pairwise_comparisons/index.html.erb
@@ -25,7 +25,7 @@
 <br/>
 <div>
   <p id="prompt" class="feature-text">
-    Please choose which driver should get the ping.
+    Please choose which request you prefer.
   </p>
   <p id="top-counter" class="feature-text" align="right" style="margin-top:-3%;font-weight:bold;">
     Scenario 1/<%= @num_pairs %>
