styled feature selection page

--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -233,6 +233,7 @@ a:hover
   font-size: 30px;
   margin-top: 30px;
   margin-bottom: 2%;
+  margin-left:10%;
   font-family: "Helvetica Neue", sans-serif;
   color:black;
 }
