updated the text

--- a/app/views/pairwise_comparisons/new_how.html.erb
+++ b/app/views/pairwise_comparisons/new_how.html.erb
@@ -62,7 +62,7 @@ the time a payment is issued. </p> <br / >
 <h3 class="title">Feature Selection for Your Social Preference Model</h3>
 <hr class = "feature-hr">
 <p class = "feature-text" >
-  Docial preference means which driver should receive the request when there are multiple drivers waiting for a ping. 
+  Social preference means which driver should receive the request when there are multiple drivers waiting for a ping. 
   In other words, <b>you act as the algorithm in this section.</b>
 </p>
 <div class="feature-image-block">
