--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -397,3 +397,10 @@ a:hover
   font-family: "Helvetica Neue", sans-serif;
   font-weight:bold;
 }
+
+.pc-selection {
+  margin-top:"3%";
+  font-weight:"bold";
+  font-family: "Helvetica Neue", sans-serif;
+  font-size:14px;
+}
