--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,8 @@
 
     <%= yield %>
 <!-- Footer -->
+<% 
+=begin %>
 <footer class="footer" id="footer">
  <!-- Copyright -->
  <div class = "containeri-foot">
@@ -37,6 +39,8 @@
     </div>
  </div>
 </footer>
+<% 
+=end %>
 <!-- Footer -->
 <script>
  $(document).ready(function() {
