--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -49,6 +49,13 @@
   font-weight:bold;
 }
 
+#rl-page .feature-unit {
+  font-size:20px;
+  display:inline-block;
+  font-family: "Helvetica Neue", sans-serif;
+  font-weight:bold;
+}
+
 #rl-page .feature-name {
   margin-bottom:2%;
   margin-top:2%;
@@ -68,11 +75,11 @@
 }
 
 #rl-page .left {
-  width: 80%;
+  width: 60%;
 }
 
 #rl-page .right {
-  width: 20%;
+  width: 40%;
   margin-top: 2%;
   text-align: right;
 }
