--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -476,6 +476,7 @@ a:hover
 .modal-next-button {
   margin-top:2%;
   margin-right:4%;
+  margin-bottom:1%;
   float:right;
   width:15%; 
   padding-top:2%; 
