--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -38,7 +38,7 @@
 
 #rl-page .card {
   transition: 0.3s;
-  width: 60%;
+  width: 50%;
   border-radius: 5px;
 }
 
@@ -143,4 +143,20 @@
 
 #rl-page .scenario-input {
   width: 20%;
+}
+
+#rl-page .rl-col {
+  float: left;
+  width: 16.6666%;
+}
+
+#rl-page .rl-row {
+  margin: 0 auto;
+  width: 90%;
+}
+
+#rl-page .rl-row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
