--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -38,7 +38,7 @@
 
 #rl-page .card {
   transition: 0.3s;
-  width: 50%;
+  margin-right: 10px;
   border-radius: 5px;
 }
 
@@ -67,7 +67,6 @@
 }
 
 #rl-page .column {
-  float: left;
   width: 50%;
 }
 
@@ -146,7 +145,8 @@
 }
 
 #rl-page .rl-col {
-  float: left;
+  // float: left;
+  display: inline-block;
   width: 16.6666%;
 }
 
