changed working for individual / social model

--- a/app/views/pairwise_comparisons/_page_1.html.erb
+++ b/app/views/pairwise_comparisons/_page_1.html.erb
@@ -1,5 +1,5 @@
 <div id = "pg_1">
-  <h3 class="title">Answer Pairwise Comparisons to Train Your Individual Preference Profile</h3>
+  <h3 class="title">Answer Pairwise Comparisons to Train Your Work Preference Model</h3>
   <hr class="feature-hr">
   <br>
 
