--- a/app/views/pairwise_comparisons/new.html.erb
+++ b/app/views/pairwise_comparisons/new.html.erb
@@ -55,7 +55,7 @@ the time a payment is issued. </p> <br / >
 
 
 <div class = "contain" style = "display:none">
-<h3 class="title">Feature Selection for Your Individual Preference Profile</h3>
+<h3 class="title">Feature Selection for Your Work Preference Model</h3>
 <hr class = "feature-hr">
 <p class = "feature-text" >
   Your company uses an algorithm to match you with potential customers.
