--- a/app/views/ranked_list/ranked_list.html.erb
+++ b/app/views/ranked_list/ranked_list.html.erb
@@ -1,6 +1,6 @@
 <div id="rl-page">
 
-  <h1>Individual Preference Models</h1>
+  <h1>Work Preference Model</h1>
   <hr class = "feature-hr">
   <p class = "about-text">
     The model list is a list of scenarios that the AI has ranked from most preferable to least preferable. 
