added icons but currently not displaying

--- a/app/views/features/_form.html.erb
+++ b/app/views/features/_form.html.erb
@@ -10,6 +10,7 @@
             Lower Bound  :<%= feature_range.text_field :lower_bound %>
             Upper Bound  :<%= feature_range.text_field :upper_bound %>
           <% end %>
+          <%= f.input :icon, label_html: { class: 'active' } %>
           <%= f.text_field :active %>
       </div>
     </div>
