--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -148,6 +148,7 @@
   // float: left;
   display: inline-block;
   width: 16.6666%;
+  text-align: center;
 }
 
 #rl-page .rl-row {
@@ -159,4 +160,15 @@
   content: "";
   display: table;
   clear: both;
+}
+
+#rl-page .rl-header {
+  font-size: 20px;
+  font-weight: 400;
+  font-family: "Helvetica Neue", sans-serif;
+  color: #7595C7;
+}
+
+#rl-page .rl-header-cirlce {
+  width:40%;
 }
