--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -43,11 +43,11 @@
 }
 
 #rl-page .feature-value {
-  margin-top:2%;
   font-size:22px;
   display:inline-block;
   font-family: "Helvetica Neue", sans-serif;
   font-weight:bold;
+  margin-bottom: 40%;
 }
 
 #rl-page .feature-unit {
@@ -57,13 +57,11 @@
   font-weight:bold;
 }
 
-#rl-page .feature-name {
-  margin-top:1%;
-  margin-bottom:2%;
+#rl-page .rl-feature-name {
   font-size:20px;
-  line-height:1.4;
-  font-family: "Helvetica Neue", sans-serif;
+  font-family:"Helvetica Neue", sans-serif;
   font-weight:400;
+  height:62px;
 }
 
 #rl-page .column {
@@ -144,16 +142,25 @@
   width: 20%;
 }
 
+#rl-page .rl-feature-col {
+  display: inline-block;
+  width: 25%;
+  text-align: left;
+  margin-right:2%;
+}
+
 #rl-page .rl-col {
   // float: left;
   display: inline-block;
-  width: 16.6666%;
+  width: 12%;
   text-align: center;
+  margin-left: 1%;
+  margin-right: 1%;
 }
 
 #rl-page .rl-row {
   margin: 0 auto;
-  width: 90%;
+  width: 95%;
 }
 
 #rl-page .rl-row:after {
@@ -171,4 +178,10 @@
 
 #rl-page .rl-header-cirlce {
   width:40%;
+}
+
+#rl-page .pc-header {
+  color:#3d6ab1;
+  font-weight: bold;
+  margin-bottom: 20%;
 }
