--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -234,7 +234,6 @@ a:hover
 }
 
 .feature-card-text {
-  margin-left:10%;
   font-size:24px;
   font-weight:400;
   line-height:1.3;
@@ -244,7 +243,7 @@ a:hover
   max-width: 70%;
   float:left;
   word-wrap:break-word;
-  margin-top:-1%;
+  margin-top:-1% !important;
 }
 
 
@@ -394,10 +393,17 @@ a:hover
 }
 
 .feature-icon {
-  font-size:50px;
+  font-size:30px;
   float:left;
   margin-left:-2% !important;
   margin-right:1% !important;
+  margin-top:-.5% !important;
+}
+
+.pc-feature-icon {
+  font-size:25px;
+  float:left;
+  margin-right:2% !important;
 }
 
 .pc-selection {
@@ -405,6 +411,11 @@ a:hover
   font-weight:"bold";
   font-family: "Helvetica Neue", sans-serif;
   font-size:14px;
+}
+
+.pc-header {
+  color:#3d6ab1;
+  font-weight: bold;
 }
 
 .new-feature-modal {
