added dnd indicator

--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -185,3 +185,9 @@
   font-weight: bold;
   margin-bottom: 20%;
 }
+
+#rl-page .dnd-indicator {
+  width: 35px;
+  height: auto;
+  margin-top: 20px;
+}
