--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -30,7 +30,7 @@ a:hover
   color: #3d6ab1;
   font-weight: bold;
   font-size:3em;
-  margin-left:3.5vw;
+  margin-left:10%;
   margin-bottom: 60px;
 }
 
@@ -49,11 +49,19 @@ a:hover
   margin-left: 3.5vw;
 }
 
+.control-group-id {
+  margin-left: 10%;
+}
+
 .control-group-id label {
   color: black;
   font-weight:bold;
   font-size: 1.38em;
   margin-bottom:2.5vh;
+}
+
+.control-group-password {
+  margin-left: 10%;
 }
 
 
@@ -139,6 +147,23 @@ a:hover
   width: 100vw;
   position: relative;
   left: calc(-1 * (100vw - 100%) / 2);
+}
+
+.login-button {
+  margin-top:10%;
+  float:right;
+  padding: 20px 40px 20px 40px;
+  color:#FFFFFF;
+  background-color:#3d6ab1;
+  font-weight:bold;
+  font-size:20px;
+  text-align:center;
+  border-radius: 5px;
+}
+
+.login-button:hover {
+  background-color:#355ea1;
+  cursor: pointer;
 }
 
 /* END OF Login */
