--- a/app/views/features/new.html.erb
+++ b/app/views/features/new.html.erb
@@ -1,140 +1,6 @@
-<div style = "width:90%;margin-left:5%;">
-<h1>Add Categorical Feature </h1>
+<h1 class = "title">New Feature</h1>
 
-<form action="#">
-  Feature Name:<br>
-  <input id = "feature-name" type="text" name="featurename" value="">
-  <br><br>
-</form>
-
-<a class="waves-effect waves-dark btn" id = "next_btn" style = "width:20%;color:#FFFFFF;"> Next </a>
-
-<br> <br> <br> <br>
-<form action="#" id = "opts" style = "display:none;">
-  <div class = "opt-1">
-  Option 1 :<br>
-  <input id = "opt-1" type="text" name="opt" value="">
- </div>
-
-</form>
-
-<a class="waves-effect waves-dark btn" id = "add_btn" style = "width:20%;color:#FFFFFF;display:none"> Add option </a>
-
-</div>
-<br> <br>
-<a class="waves-effect waves-dark btn" id = "submit_btn" style = "width:20%;color:#FFFFFF;display:none;margin-left:2%;"> Submit </a>
-
-
-
-<script type="text/javascript">
-
-  $("#next_btn").click(function(event) {
-    $("#opts").css('display', 'block')
-    $("#add_btn").css('display', 'block')
-    $("#submit_btn").css('display', 'block')
-
-  });
-
-  $("#add_btn").click(function(event) {
-    let childs = ($("#opts")[0]).children
-    let len = childs.length
-    last_opt = (len+1) / 2
-    last_opt = last_opt + 1
-    var txt1 = `<br><div class = 'opt-${last_opt}'> Option ${last_opt} :<br> <input id = 'opt-${last_opt}' type='text' name='opt' value=''> </div>`;
-    $("#opts").append(txt1);
-  });
-
-
-  $("#submit_btn").click(function(event) {
-    let childs = ($("#opts")[0]).children
-    let len = childs.length
-    last_opt = (len+1) / 2
-    var options = ""
-    for (let i = 0; i < last_opt; i++)
-    {
-      id = i + 1
-      let valu = ($("#opt-"+id)[0]).value
-      options = options + valu + "*"
-    }
-    options = options.slice(0, options.length-1)
-    let cat = 1;
-    let name = $("#feature-name")[0].value
-    let upper = 0;
-    let lower = 0;
-
-    $.ajax({
-      url: "/features?cat="+cat+"&name="+name+"&upper="+upper +"&lower="+lower +"&opts="+options,
-      type: "post",
-      success: function(){
-        console.log('Saved Successfully');
-        window.location.href = "/pairwise_comparisons/new"
-      },
-      error:function($xhr){
-        console.log($xhr);
-      }
-    });
-
-  });
-
-
-
-</script>
-
-
-<div style = "width:90%;margin-left:5%;">
-<h1>Add Continuous Feature </h1>
-
-<form action="#">
-  Feature Name:<br>
-  <input id = "feature-name" type="text" name="featurename" value="">
-  <br><br>
-</form>
-
-<a class="waves-effect waves-dark btn" id = "next_btn" style = "width:20%;color:#FFFFFF;"> Next </a>
-<br><br> <br><br>
-<form action="#" id = "bounds" style = "display:none;">
-  Lower bound :<br>
-  <input id = "lower-bound" type="text" name="lower" value="">
-  Upper bound: <br>
-  <input id = "upper-bound" type="text" name="upper" value="">
-  <br><br>
-</form>
-
-<a class="waves-effect waves-dark btn" id = "submit_btn" style = "width:20%;color:#FFFFFF;display:none;"> Submit </a>
-
-
-</div>
-
-
-
-<script type="text/javascript">
-
-  $("#next_btn").click(function(event) {
-    $("#bounds").css('display', 'block');
-    $("#submit_btn").css('display', 'block');
-  });
-
-
-
-  $("#submit_btn").click(function(event) {
-    let name = $("#feature-name")[0].value
-    let lower = parseInt($("#lower-bound")[0].value)
-    let upper = parseInt($("#upper-bound")[0].value)
-    let cat = 0
-    let options = "zilch"
-    $.ajax({
-      url: "/features?cat="+cat+"&name="+name+"&upper="+upper +"&lower="+lower +"&opts="+options,
-      type: "post",
-      success: function(){
-        console.log('Saved Successfully');
-        window.location.href = "/pairwise_comparisons/new"
-      },
-      error:function($xhr){
-        console.log($xhr);
-      }
-    });
-  });
-
-
-
-</script>
+<%= render 'form', feature: @feature %>
+<%= link_to 'Show', @feature %> |
+<%= link_to 'Back', features_path %>
+<%# <%= link_to 'Create Feature', feature_path(@feature) %>
