--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -8,12 +8,6 @@
   display: inline-block;
 }
 
-#rl-page h5 {
-  color:#3d6ab1;
-  text-align: center;
-  margin-top: -2%;
-}
-
 #rl-page h5.human-rank {
   margin-bottom: 8%;
   text-align: left;
@@ -181,14 +175,62 @@
   width:40%;
 }
 
-#rl-page .pc-header {
+#rl-page .scenario-header {
   color:#3d6ab1;
   font-weight: bold;
   margin-bottom: 20%;
+  margin-top: -2%;
+  text-align: center;
 }
 
 #rl-page .dnd-indicator {
   width: 35px;
   height: auto;
   margin-top: 20px;
+}
+
+#rl-page .rl-subtitle {
+  font-family: "Helvetica Neue bold", sans-serif;
+  margin-left:10%;
+  margin-top:3%;
+  margin-bottom:3%;
+  color:#567DBB;
+  font-weight:550;
+}
+
+#rl-page .rl-subtitle2 {
+  font-family: "Helvetica Neue bold", sans-serif;
+  margin-left:10%;
+  color:#6488C1;
+  font-weight:550;
+  margin-bottom:3%;
+}
+
+#rl-page .number-circle {
+  margin-left:10%;
+  margin-right:5%;
+  border-radius: 50%;
+  width: 115px;
+  height: 115px;
+  padding: 40px;
+  background: #567DBB;
+  color: white;
+  text-align: center;
+  font: 32px "Helvetica Neue bold", sans-serif;
+  float:left;
+}
+
+#rl-page .accuracy-table {
+  margin-top:5%;
+  margin-bottom:5%;
+  margin-left:15%;
+  width:60%;
+  font-family: "Helvetica Neue bold", sans-serif;
+  border-collapse: collapse;
+}
+
+#rl-page th {
+  font-size:20px;
+  font-weight:500;
+  color:#6488C1;
 }
