ordered active feature first in feature tab

--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -231,6 +231,23 @@
 
 #rl-page th {
   font-size:20px;
-  font-weight:500;
+  font-weight:600;
   color:#6488C1;
+  border: 0 !important;
+}
+
+#rl-page td {
+  font-size:16px;
+  font-weight:500;
+  border: 0 !important;
+  padding:5px !important;
+}
+
+#rl-page tr {
+  border: 0 !important;
+}
+
+#rl-page .learned-accuracy {
+  font-size:16px;
+  font-weight:500;
 }
