--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -248,8 +248,8 @@
 #rl-page td {
   font-size:16px;
   font-weight:500;
-  border: 0 !important;
   padding:5px !important;
+  margin-left:5px !important;
 }
 
 #rl-page tr {
