added support for new categorical features

--- a/app/views/features/index.html.erb
+++ b/app/views/features/index.html.erb
@@ -1,9 +1,5 @@
 <h1>Features</h1>
-<button class="btn">
-  <%= link_to new_feature_path do %>
-    New feature
-  <% end %>
-</button>
+To make a new feature, visit /react/new_feature as admin
 <table class="striped highlight" style="width:60%;margin: 0 auto;">
   <thead>
     <th>Name</th>
