Revert "added support for new categorical features"
This reverts commit 07c7f3e2c55793498984fa7eca3464c5b37fab2e.

Revert back to old commit.

--- a/app/views/features/index.html.erb
+++ b/app/views/features/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Features</h1>
-To make a new feature, visit /react/new_feature as admin
+<button class="btn">
+  <%= link_to new_feature_path do %>
+    New feature
+  <% end %>
+</button>
 <table class="striped highlight" style="width:60%;margin: 0 auto;">
   <thead>
     <th>Name</th>
