--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -353,7 +353,9 @@ a:hover
 }
 
 #rank_yes_btn {
-  margin-top: 100%;
+  text-align: center;
+  margin-top:10%;
+  margin-left:40%;
   background: #3d6ab1;
   color: #ffffff;
   border-radius: 5px;
@@ -663,9 +665,12 @@ input:focus {
 }
 
 .loading-gif {
-  height:50%;
-  width:50%;
-  margin: 0 auto;
+  height:30%;
+  width:30%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:5%;
 }
 
 .new-feature-form {
